<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MFS100_final" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="0sp" >

        <TextView
            android:id="@+id/lblTitle"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="5sp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:gravity="top|start"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgFinger"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:background="@drawable/imagefinger"
                android:contentDescription="@string/image_finger"
                android:src="@drawable/finger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:orientation="vertical"
                android:paddingStart="5sp"
                android:paddingEnd="0sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:orientation="horizontal" >
                    <Button
                        android:id="@+id/btnInit"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Init" />

                    <Button
                        android:id="@+id/btnUninit"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/UnInit" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnStartCapture"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Start" />

                    <Button
                        android:id="@+id/btnStopCapture"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Stop" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSyncCapture"
                    style="@style/buttonbig"
                    android:background="@drawable/button"
                    android:onClick="onControlClicked"
                    android:text="@string/SyncCapture" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnExtractISOTemplate"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/ExtractISO" />

                    <Button
                        android:id="@+id/btnExtractWSQ"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/ExtractWSQ" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnMatchISOTemplate"
                    style="@style/buttonbig"
                    android:background="@drawable/button"
                    android:onClick="onControlClicked"
                    android:text="@string/MatchISO" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="3sp"
        android:paddingTop="5sp" >

        <TextView
            android:id="@+id/lblMessage"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message"
            android:gravity="center"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEventLog"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".70"
            android:background="@drawable/message"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:text=""
            android:textSize="12sp" >
        </EditText>


        <EditText
            android:id="@+id/txtEventLog1"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".70"
            android:background="@drawable/message"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:text="@string/n"
            android:textSize="12sp" >
        </EditText>
        <Button
            android:id="@+id/btnClearLog"
            style="@style/buttonfull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="onControlClicked"
            android:text="@string/ClearLog" />
    </LinearLayout>

</LinearLayout>