<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10sp">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:text="@string/select_finger_of_your_choice"
            android:layout_marginStart="20sp"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@android:color/holo_blue_light"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <RadioGroup
        android:id="@+id/linearfinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:text="@string/none"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btnFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:text="@string/left_hand"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/right_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:text="@string/right_hand"
            android:textSize="16sp" />

    </RadioGroup>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/finger_type"
            android:background="#F2E2CD"
            android:textSize="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginStart="5sp"
                android:text="@string/select_finger_of_your_choice"/>
            <RadioButton
                android:id="@+id/idRadio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumb_finger" />

            <RadioButton
                android:id="@+id/idRadio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_finger" />

            <RadioButton
                android:id="@+id/idRadio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_finger" />

            <RadioButton
                android:id="@+id/idRadio_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ring_finger" />

            <RadioButton
                android:id="@+id/idRadio_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/little_finger" />

        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="16sp"
            android:layout_marginTop="15sp"
            android:text="@string/finger_detail"
            android:textStyle="bold"
            android:layout_marginEnd="10sp"
            android:background="?attr/colorControlHighlight"
            android:layout_toEndOf="@+id/finger_type" />

        <GridView
            android:id="@+id/grid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/finger_type"
            android:layout_alignTop="@+id/finger_type"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="10sp"
            android:layout_toEndOf="@+id/finger_type"
            android:background="?attr/colorControlHighlight"
            android:numColumns="2"
            android:scrollbars="vertical" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@android:color/holo_blue_light"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_finger"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/ok"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_marginEnd="140sp"
            android:layout_height="50sp"
            android:gravity="center"
            android:layout_alignTop="@+id/cancel_finger"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@+id/cancel_finger"
            android:text="" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@android:color/holo_blue_light"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

</LinearLayout>