<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fav"
    tools:context="com.example.mega2.FingerPrint.Newuser">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginStart="135sp"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:text="@string/enter_details"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="0.5sp"
    android:layout_marginStart="20sp"
    android:layout_marginBottom="30sp"
    android:layout_marginEnd="20sp">

    <EditText
    android:id="@+id/uservalue"
    android:layout_width="match_parent"
    android:layout_height="50sp"
    android:drawableLeft="@drawable/account_outline"
    android:textSize="20sp"

    android:hint="@string/userid"
    android:inputType="text"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:layout_marginTop="20sp"/>

    <EditText
    android:id="@+id/name"

    android:layout_width="match_parent"
    android:layout_height="50sp"
    android:textSize="20sp"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:drawableLeft="@drawable/alphabetical_name"
    android:hint="@string/username"
    android:inputType="text"
    android:layout_marginTop="10sp"/>

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:drawableLeft="@drawable/alphabetical_name"
            android:hint="Middle Name"
            android:inputType="text"
            android:layout_marginTop="10sp"/>
        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:drawableLeft="@drawable/alphabetical_name"
            android:hint="Last Name"
            android:inputType="text"
            android:layout_marginTop="10sp"/>
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0sp"
        android:layout_weight=".7"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
    android:id="@+id/dob"
    android:layout_width="match_parent"
    android:layout_height="50sp"
    android:layout_marginTop="10sp"
    android:gravity="center_vertical"
    android:drawableLeft="@drawable/calendar"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:hint="@string/date_of_birth"
    android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:weightSum="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0sp"
            android:layout_height="70dp"
            android:layout_marginEnd="50sp"
            android:layout_marginBottom="10sp"
            android:layout_weight=".50"
            android:background="@drawable/button"
            android:text="@string/submit"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:visibility="invisible"
            android:layout_width="0sp"
            android:layout_height="70dp"
            android:layout_weight=".50"
            android:layout_marginEnd="30sp"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/image_pic"
        android:background="@drawable/textview"
        android:hint="@string/tap_the_box_to_open_camera"
        android:layout_height="50sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:drawableLeft="@drawable/camera"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:layout_marginBottom="20sp"/>
</LinearLayout>