<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fav"
    android:orientation="vertical"
    tools:context="com.example.mega2.FingerPrint.Existinguser">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginStart="5sp"
            android:id="@+id/search_bar11"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1sp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="70dp"
            android:layout_height="35sp"
            android:layout_weight="0.130"
            android:background="@drawable/textview"
            android:gravity="center"
            android:text="En.No."
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="35sp"
            android:layout_weight="0.30"
            android:background="@drawable/textview"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/name_ext"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />




        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="35sp"
            android:layout_weight="0.22"
            android:background="@drawable/textview"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/date_of_birth_ext"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />



        <TextView
            android:id="@+id/fcnt"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_weight="0.22"
            android:background="@drawable/textview"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="Finger count"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:paddingTop="5dp"
        android:paddingBottom="3dp" />
</LinearLayout>

